Ajout de messagde log.